--- a/MoodTracker/Base.lproj/Main.storyboard
+++ b/MoodTracker/Base.lproj/Main.storyboard
@@ -12,32 +12,23 @@
             <objects>
                 <viewController id="HVh-JB-716" customClass="QuoteViewController" customModule="MoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sKI-Rw-wCv">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BDH-6S-0xk">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="relax-6" translatesAutoresizingMaskIntoConstraints="NO" id="BDH-6S-0xk">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have felt this mood 4 times this week. Here's a little motivational quote." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZG2-Sj-hPh">
-                                <rect key="frame" x="30" y="60" width="354" height="60"/>
+                                <rect key="frame" x="30" y="114" width="354" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="Kxb-4b-cjG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Just when the caterpillar thought the world was ending, he turned into a butterfly.&quot; - Proverb" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rjs-09-i1w">
-                                <rect key="frame" x="30" y="170" width="334" height="300"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="jAa-ee-mYI"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGA-lx-s3H">
-                                <rect key="frame" x="40" y="670" width="100" height="40"/>
+                                <rect key="frame" x="40" y="680" width="100" height="40"/>
                                 <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="NOG-oM-TzO"/>
@@ -47,23 +38,29 @@
                                 <state key="normal" title="Tracking">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <connections>
-                                    <segue destination="udL-Dy-zdq" kind="show" identifier="MoodTrackerSegue" id="qJo-mE-Ijd"/>
-                                </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="&quot;Just when the caterpillar thought the world was ending, he turned into a butterfly.&quot; - Proverb" translatesAutoresizingMaskIntoConstraints="NO" id="gzu-d4-pGb">
+                                <rect key="frame" x="30" y="234" width="354" height="350"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="jHp-2s-5DD"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="XGA-lx-s3H" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" constant="40" id="3db-z8-WWd"/>
                             <constraint firstItem="zez-Hq-3mo" firstAttribute="bottom" secondItem="BDH-6S-0xk" secondAttribute="bottom" id="7sE-Xr-mLE"/>
-                            <constraint firstItem="Rjs-09-i1w" firstAttribute="top" secondItem="ZG2-Sj-hPh" secondAttribute="bottom" constant="50" id="9qh-D2-UKD"/>
-                            <constraint firstItem="Rjs-09-i1w" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" constant="30" id="HL3-Ba-qlo"/>
-                            <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="Rjs-09-i1w" secondAttribute="trailing" constant="50" id="Io8-4g-3Xk"/>
+                            <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="gzu-d4-pGb" secondAttribute="trailing" constant="30" id="F4B-KL-WLY"/>
                             <constraint firstItem="BDH-6S-0xk" firstAttribute="top" secondItem="zez-Hq-3mo" secondAttribute="top" id="KQH-re-a3y"/>
-                            <constraint firstItem="XGA-lx-s3H" firstAttribute="top" secondItem="Rjs-09-i1w" secondAttribute="bottom" constant="200" id="akq-Ok-5MU"/>
+                            <constraint firstItem="gzu-d4-pGb" firstAttribute="top" secondItem="ZG2-Sj-hPh" secondAttribute="bottom" constant="60" id="M2u-ou-evZ"/>
+                            <constraint firstItem="gzu-d4-pGb" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" constant="30" id="kxu-3j-9IA"/>
                             <constraint firstItem="BDH-6S-0xk" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" id="mQC-CZ-N5I"/>
-                            <constraint firstItem="ZG2-Sj-hPh" firstAttribute="top" secondItem="zez-Hq-3mo" secondAttribute="top" constant="60" id="rli-Cy-sdQ"/>
+                            <constraint firstItem="ZG2-Sj-hPh" firstAttribute="top" secondItem="zez-Hq-3mo" secondAttribute="top" constant="70" id="rli-Cy-sdQ"/>
                             <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="BDH-6S-0xk" secondAttribute="trailing" id="siX-BA-evG"/>
+                            <constraint firstItem="XGA-lx-s3H" firstAttribute="top" secondItem="gzu-d4-pGb" secondAttribute="bottom" constant="96" id="t7z-9s-sMR"/>
                             <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="ZG2-Sj-hPh" secondAttribute="trailing" constant="30" id="tLy-Bn-gTd"/>
                             <constraint firstItem="ZG2-Sj-hPh" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" constant="30" id="ztL-Sd-viC"/>
                         </constraints>
@@ -111,7 +108,6 @@
                                 </state>
                                 <connections>
                                     <action selector="saveBtnPressed:" destination="oeI-ql-yea" eventType="touchUpInside" id="bGv-na-xK3"/>
-                                    <segue destination="HVh-JB-716" kind="show" identifier="QuoteSegue" id="tSm-0H-5Da"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="What made you feel this way today..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cDN-Dq-ru5">
@@ -212,7 +208,7 @@
             <objects>
                 <tableViewController id="udL-Dy-zdq" customClass="MoodTableViewController" customModule="MoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6kP-Ec-Es6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
@@ -264,7 +260,7 @@
             <point key="canvasLocation" x="-730.43478260869574" y="395.75892857142856"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="qJo-mE-Ijd"/>
-    </inferredMetricsTieBreakers>
+    <resources>
+        <image name="relax-6" width="5760" height="3840"/>
+    </resources>
 </document>
