--- a/MoodTracker/Base.lproj/Main.storyboard
+++ b/MoodTracker/Base.lproj/Main.storyboard
@@ -12,74 +12,26 @@
             <objects>
                 <viewController id="HVh-JB-716" customClass="QuoteViewController" customModule="MoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sKI-Rw-wCv">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="relax-6" translatesAutoresizingMaskIntoConstraints="NO" id="BDH-6S-0xk">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bdn-Ac-I0d">
+                                <rect key="frame" x="0.0" y="44" width="414" height="618"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="W5y-dX-MEQ">
-                                <rect key="frame" x="0.0" y="342" width="414" height="500"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="500" id="HlI-Je-6Lm"/>
-                                </constraints>
-                            </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="&quot;Just when the caterpillar thought the world was ending, he turned into a butterfly.&quot; - Proverb" adjustsFontForContentSizeCategory="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gzu-d4-pGb">
-                                <rect key="frame" x="30" y="502" width="354" height="200"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="jHp-2s-5DD"/>
-                                </constraints>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGA-lx-s3H">
-                                <rect key="frame" x="274" y="742" width="100" height="40"/>
-                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="NOG-oM-TzO"/>
-                                    <constraint firstAttribute="width" constant="100" id="W5E-5b-97E"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                <state key="normal" title="Tracking">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <segue destination="udL-Dy-zdq" kind="show" identifier="QuoteTrackingSegue" id="lK4-MU-MGF"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have felt *mood* *4* times this week." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZG2-Sj-hPh">
-                                <rect key="frame" x="30.000000000000014" y="732" width="209.33333333333337" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="Kxb-4b-cjG"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="zez-Hq-3mo" firstAttribute="bottom" secondItem="BDH-6S-0xk" secondAttribute="bottom" id="7sE-Xr-mLE"/>
-                            <constraint firstItem="XGA-lx-s3H" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZG2-Sj-hPh" secondAttribute="trailing" constant="12" id="HZb-IO-eiY"/>
-                            <constraint firstItem="gzu-d4-pGb" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" constant="30" id="Iwp-Ev-HmY"/>
-                            <constraint firstItem="BDH-6S-0xk" firstAttribute="top" secondItem="zez-Hq-3mo" secondAttribute="top" id="KQH-re-a3y"/>
-                            <constraint firstAttribute="bottom" secondItem="W5y-dX-MEQ" secondAttribute="bottom" id="UhN-HF-B8N"/>
-                            <constraint firstItem="ZG2-Sj-hPh" firstAttribute="top" secondItem="gzu-d4-pGb" secondAttribute="bottom" constant="30" id="cGb-vd-Enq"/>
-                            <constraint firstAttribute="bottom" secondItem="ZG2-Sj-hPh" secondAttribute="bottom" constant="50" id="ccC-wQ-MXe"/>
-                            <constraint firstItem="W5y-dX-MEQ" firstAttribute="leading" secondItem="sKI-Rw-wCv" secondAttribute="leading" id="e7R-SI-a1A"/>
-                            <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="gzu-d4-pGb" secondAttribute="trailing" constant="30" id="ecI-JY-cZD"/>
-                            <constraint firstAttribute="bottom" secondItem="XGA-lx-s3H" secondAttribute="bottom" constant="60" id="guF-O2-68w"/>
-                            <constraint firstAttribute="trailing" secondItem="W5y-dX-MEQ" secondAttribute="trailing" id="h8f-7n-4bQ"/>
-                            <constraint firstItem="gzu-d4-pGb" firstAttribute="centerX" secondItem="sKI-Rw-wCv" secondAttribute="centerX" id="iky-uo-gAB"/>
-                            <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="XGA-lx-s3H" secondAttribute="trailing" constant="40" id="lH2-1B-8o3"/>
-                            <constraint firstItem="BDH-6S-0xk" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" id="mQC-CZ-N5I"/>
-                            <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="BDH-6S-0xk" secondAttribute="trailing" id="siX-BA-evG"/>
-                            <constraint firstItem="ZG2-Sj-hPh" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" constant="30" id="ztL-Sd-viC"/>
+                            <constraint firstItem="Bdn-Ac-I0d" firstAttribute="top" secondItem="zez-Hq-3mo" secondAttribute="top" id="6sX-Tl-dhw"/>
+                            <constraint firstItem="zez-Hq-3mo" firstAttribute="bottom" secondItem="Bdn-Ac-I0d" secondAttribute="bottom" constant="200" id="OfJ-sd-4Si"/>
+                            <constraint firstItem="Bdn-Ac-I0d" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" id="Uke-Oy-ixB"/>
+                            <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="Bdn-Ac-I0d" secondAttribute="trailing" id="VYe-Ss-oUv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zez-Hq-3mo"/>
                     </view>
                     <navigationItem key="navigationItem" id="6Xk-RC-YQL"/>
+                    <connections>
+                        <outlet property="imageView" destination="Bdn-Ac-I0d" id="t92-6x-KJc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s9G-LE-z8J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -121,7 +73,6 @@
                                 </state>
                                 <connections>
                                     <action selector="saveBtnPressed:" destination="oeI-ql-yea" eventType="touchUpInside" id="bGv-na-xK3"/>
-                                    <segue destination="HVh-JB-716" kind="show" identifier="CommentQuoteSegue" id="1ja-7o-T1f"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What made you feel this way today?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXQ-sK-Nmz">
@@ -236,7 +187,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="-7" translatesAutoresizingMaskIntoConstraints="NO" id="wTX-lL-YdV" userLabel="Sad">
-                                        <rect key="frame" x="124.66666666666663" y="0.0" width="62.333333333333329" height="80"/>
+                                        <rect key="frame" x="124.66666666666664" y="0.0" width="62.333333333333329" height="80"/>
                                         <subviews>
                                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ak4-dk-UPD">
                                                 <rect key="frame" x="0.0" y="0.0" width="62.333333333333336" height="62.333333333333336"/>
@@ -278,7 +229,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="-7" translatesAutoresizingMaskIntoConstraints="NO" id="Zwe-pG-lTD" userLabel="Happy">
-                                        <rect key="frame" x="249.33333333333337" y="0.0" width="62.333333333333343" height="80"/>
+                                        <rect key="frame" x="249.33333333333334" y="0.0" width="62.333333333333343" height="80"/>
                                         <subviews>
                                             <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HsG-Df-Pjo">
                                                 <rect key="frame" x="0.0" y="0.0" width="62.333333333333336" height="62.333333333333336"/>
@@ -368,7 +319,7 @@
             <objects>
                 <tableViewController id="udL-Dy-zdq" customClass="MoodTableViewController" customModule="MoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6kP-Ec-Es6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
@@ -424,16 +375,12 @@
     <resources>
         <image name="angry" width="96" height="96"/>
         <image name="annoyed" width="96" height="96"/>
-        <image name="background" width="96" height="96"/>
         <image name="excited" width="96" height="96"/>
         <image name="happy" width="96" height="96"/>
         <image name="meh" width="96" height="96"/>
-        <image name="relax-6" width="5760" height="3840"/>
         <image name="sad" width="96" height="96"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="1ja-7o-T1f"/>
-        <segue reference="lK4-MU-MGF"/>
         <segue reference="7q0-kb-Ceg"/>
     </inferredMetricsTieBreakers>
 </document>
